# bloodBender

./: .env.example  .envrc  .gitignore  CLEANUP_SUMMARY.md  CODEBASE_CONTEXT.md  NIX_MIGRATION_PLAN.md  NIX_QUICK_START.md  README.md  bloodbank_download.py  cleanup_deprecated.sh  flake.nix  monitor_sync.sh  pyproject.toml  run_lstm_inference.sh
bareMetalBender/: .gitignore  README.md  ivp.cpp  plot_data.py  rbf.cpp  system.cpp
bloodBath/: README.md  SWEETBLOOD_STRUCTURE_VERIFICATION.md  __init__.py  __main__.py  v2.0_Complete_Report.md  v2.0_Implementation_Summary.md
bloodBath/api/: __init__.py  common.py  connector.py  events.py  fetcher.py  real_tandemsource.py  tandemsource.py
bloodBath/bloodBank/: BLOODBANK_README.md  CONSOLIDATION_REPORT.md  README.md  basal_20251012_222839.csv  basal_20251012_223556.csv  basal_20251013_144652.csv  cgmreading_20251012_222538.csv  cgmreading_20251012_223901.csv  cgmreading_20251013_144652.csv  incremental_resync_progress.json  resync_summary_20251013_144653.json
bloodBath/bloodBank/archives/20251013_201306_pre_v2.0_bug_fixes/: README.txt  sync_metadata.json
bloodBath/bloodBank/archives/logs/: consolidation_report.txt
bloodBath/bloodBank/lstm_pump_data/pump_881235/: dataset_summary_20251014_194829.json
bloodBath/bloodBank/metadata/: sync_metadata.json
bloodBath/bloodBank/raw/: cleanup_metadata.json  sync_metadata.json
bloodBath/cli/: __init__.py  main.py
bloodBath/core/: __init__.py  client.py  config.py  exceptions.py
bloodBath/data/: __init__.py  csv_validator.py  extractors.py  generators.py  processors.py  repair.py  resampler.py  run_comprehensive_validation.py  validators.py
bloodBath/io/: __init__.py  csv_reader.py  csv_writer.py
bloodBath/logs/changes/: CHANGELOG_v2.0_Bug_Fixes.md
bloodBath/models/: lstm_model.py
bloodBath/spec/: bloodBath_Design_Specification_v2.0.md  time_split.md  v2.0_Updates_Summary.md
bloodBath/sync/: __init__.py  harvest_manager.py  simple_sync.py  sync_engine.py
bloodBath/test_scripts/: archive_and_cleanup.py  check_v2_format.py  prepare_lstm_training_data.py  split_lstm_data.py  split_lstm_data_v2.py  test_bug_fixes.py  test_cli_logging.py  test_complete_structure.py  test_comprehensive_structure.py  test_comprehensive_timestamp.py  test_csv_cleanup.py  test_event_processing.py  test_simple_timestamp.py  test_simplified_structure.py  test_sweetblood_integration.py  test_sweetblood_structure_validation.py  test_timestamp_fix.py  test_v2_integration.py
bloodBath/train/: README.md  train_lstm.py
bloodBath/utils/: __init__.py  env_utils.py  file_utils.py  logging_utils.py  pump_info.py  structure_utils.py  time_utils.py
bloodBath/validation/: __init__.py  batch_retriever.py  data_organizer.py  integrity_validator.py  metrics_logger.py  test_framework.py
bloodTwin/: README.md  __init__.py  smoke_test.py
bloodTwin/artifacts/bloodTwin_smoke_test/: test_results.yaml
bloodTwin/artifacts/bloodTwin_unified_lstm/: model.onnx  model.ts  scaler.pkl  test_results.yaml
bloodTwin/artifacts/smoke_test/: scaler.pkl
bloodTwin/configs/: lstm.yaml  smoke_test.yaml
bloodTwin/data/: __init__.py  dataset.py
bloodTwin/models/: __init__.py  lstm.py
bloodTwin/pipelines/: __init__.py  train_lstm.py
sweetBloodDeprecated/: .gitignore
sweetBloodDeprecated/data/: README.md
tconnectsync-bb/: .gitignore
test_results/batch_test_recent_month/: README.md
test_results/batch_test_recent_week/: .gitignore
training_data_legacy/: README.md
(+483 files in other folders)
